infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    rules:
        - host: g8h9.com
          http:
            paths:
                - path: /api/comments/?(.*)
                  backend:
                    serviceName: comments-srv
                    servicePort: 3000
